@startuml
right header
<font size=24 color=black>Package: <b> ERM_0.1

end header

title
<font size=18 color=black> Електронний реєстр документів
<font size=16 color=black> ER-модель

end title

package Domain {
	
	entity Archive #eeeeff {
		name
		description
	}
	
	package DataStructurization {
		entity Record #eeeeff {
			header
			description
		}

		entity Tag #eeeeff {
			value
		}
	
		entity Link #ffffcc
	
	}
}


package AccessPolicy {
	
	entity Role #eeeeff {
		name
		description
	}

	entity Access #ffffcc
	
	entity OperationType #eeeeff {
		name
	}
	
	entity ObjectType #eeeeff {
		name
	}
	
	entity RequestType #ffffcc {
		name
	}
	
	entity Grant #ffffcc
	
	object archive #ffffff
	object record #ffffff
	object user #ffffff
	object role #ffffff
	object tag #ffffff
	
	
	object create #ffffff
	object read #ffffff
	object update #ffffff
	object delete #ffffff
	
	object admin #ffffff
	object editor #ffffff
	object viewer #ffffff
	object guest #ffffff
}

package UserProfileManagment {
	entity User #eeeeff {
		name
		email
	}
}

Access "0.*" ---u-> "1.1" User
Access "0.*" --> "1.1" Role
Access "0.*" ---u-> "1.1" Archive

Link "0.*" --> "1.1" Record
Link "0.*" --> "1.1" Tag

Archive "1.1" -- "0.*" Record

RequestType "0.*" --> "1.1" OperationType
RequestType "0.*" --> "1.1" ObjectType

Grant "0.*" --l--> "1.1" Access
Grant "0.*" ---> "1.1" RequestType

ObjectType <.. archive : instanceOf
ObjectType <.. record : instanceOf
ObjectType <.. user : instanceOf
ObjectType <.. role : instanceOf
ObjectType <.. tag : instanceOf

OperationType <.. create : instanceOf
OperationType <.. read : instanceOf
OperationType <.. update : instanceOf
OperationType <.. delete : instanceOf

Role <.. admin : instanceOf
Role <.. editor : instanceOf
Role <.. viewer : instanceOf
Role <.. guest : instanceOf

right footer

НТУУ КПІ ім.І.Сікорського
Київ-2020
end footer
@enduml

